--- a/modules/staff_management/views/staff_view.xml
+++ b/modules/staff_management/views/staff_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <odoo>
     <record id="open_staff_list" model="ir.actions.act_window">
-        <field name="name">Staff management</field>
+        <field name="name">Quản lý nhân sự</field>
         <field name="res_model">human_resource.staff</field>
         <field name="view_mode">kanban,tree,form</field>
         <field name="help" type="html">
@@ -10,13 +10,6 @@
             </p>
         </field>
     </record>
-
-<!--    <menuitem name="Staff" id="staff_management.menu_root"/>-->
-
-<!--    <menuitem name="Staff" id="staff_management.menu_1" parent="staff_management.menu_root"/>-->
-
-<!--    <menuitem name="List" id="staff_management.menu_1_list" parent="staff_management.menu_1"-->
-<!--              action="staff_management.action_window"/>-->
 
     <record id="staff_list_search" model="ir.ui.view">
         <field name="name">human_resource.staff.search</field>
@@ -100,9 +93,7 @@
                         </page>
                         <page string="Phòng ban">
                             <group>
-                                <group>
-                                    <field name="department" string="Phòng ban"/>
-                                </group>
+                                <field name="department" widget="Radio"/>
                             </group>
                         </page>
                     </notebook>
@@ -186,12 +177,12 @@
         </field>
     </record>
 
-<!--    <record id="action_send_password_reset_instructions" model="ir.actions.server">-->
-<!--        <field name="name">Send Password Reset Instructions</field>-->
-<!--        <field name="model_id" ref="base.model_res_users"/>-->
-<!--        <field name="groups_id" eval="[(4, ref('base.group_erp_manager'))]"/>-->
-<!--        <field name="binding_model_id" ref="base.model_res_users"/>-->
-<!--        <field name="state">code</field>-->
-<!--        <field name="code">records.action_reset_password()</field>-->
-<!--    </record>-->
+    <!--    <record id="action_send_password_reset_instructions" model="ir.actions.server">-->
+    <!--        <field name="name">Send Password Reset Instructions</field>-->
+    <!--        <field name="model_id" ref="base.model_res_users"/>-->
+    <!--        <field name="groups_id" eval="[(4, ref('base.group_erp_manager'))]"/>-->
+    <!--        <field name="binding_model_id" ref="base.model_res_users"/>-->
+    <!--        <field name="state">code</field>-->
+    <!--        <field name="code">records.action_reset_password()</field>-->
+    <!--    </record>-->
 </odoo>
