--- a/modules/recruitment/views/views.xml
+++ b/modules/recruitment/views/views.xml
@@ -12,10 +12,10 @@
             parent="menu_recruitment_root"
             sequence="1"/>
 
-<!--    <menuitem-->
-<!--            id="menu_interview_result"-->
-<!--            name="Kết quả phỏng vấn"-->
-<!--            action="open_interview_result_list"-->
-<!--            parent="menu_recruitment_root"-->
-<!--            sequence="2"/>-->
+    <menuitem
+            id="menu_interview_result"
+            name="Phỏng vấn"
+            action="open_interview_appointment_list"
+            parent="menu_recruitment_root"
+            sequence="2"/>
 </odoo>
